<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_search"

        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/search_d"
        app:showAsAction="always"
        android:title="@string/Search" />
    <item
        android:id="@+id/action_all_contact"
        app:showAsAction="always"
        android:title="@string/all_contacts" />

    <item
        android:id="@+id/action_new_contact"

        app:showAsAction="ifRoom"
        android:title="@string/add_new_contact" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/about_program" />



</menu>
