<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/to_anm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="0dp"
    android:background="#a7f5f5f5"
    android:orientation="horizontal"
    android:weightSum="1"
    app:layout_collapseParallaxMultiplier="1.0">


    <LinearLayout
        android:id="@+id/front"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_weight="0.90"
        android:orientation="vertical"
        android:tag="front"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.57"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"


            android:orientation="horizontal"
            android:weightSum="1.5">

            <xobyx.xcontactj.views.FontTextView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/d_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_weight="0.3"
                android:text="Lable"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/background"
                app:font="RP.ttf" />

            <xobyx.xcontactj.views.FontTextView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/d_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="+24991301 kkkkk 9kkkk91999221"
                android:textColor="@color/background"
                android:textSize="22sp"
                app:font="HP.ttf" />

            <ImageView
                android:id="@+id/d_netimge"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/contact_photo_dis"
                android:scaleType="center" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:divider="#ff008eb8"
                android:dividerPadding="5dp"
                android:focusable="false"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:weightSum="2">


                <ImageButton
                    android:id="@+id/d_call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_base"
                    android:contentDescription="@string/make_call"
                    android:scaleType="fitCenter"
                    android:src="?attr/make_call"
                    android:tint="?attr/colorAccent" />

                <ImageButton
                    android:id="@+id/d_sms"
                    android:layout_width="98dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_base"
                    android:contentDescription="@string/d_send_sms"
                    android:scaleType="fitCenter"
                    android:src="?attr/send_sms"
                    android:tint="?attr/colorAccent" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#efefef"
                android:divider="@null"
                android:tag="back"
                android:visibility="invisible">

                <include

                    layout="@layout/phone_widget"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:id="@+id/call_log_network"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".03"
            android:background="?attr/colorPrimary"
            android:layout_marginLeft="0dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/d_more"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_gravity="right"
        android:layout_weight="0.10"
        android:background="@drawable/selector_base"

        android:contentDescription="@string/make_call"
        android:scaleType="center"
        android:src="?attr/expand"
        android:tint="?attr/colorPrimary"
        android:visibility="visible"
        tools:ignore="RtlHardcoded" />

</LinearLayout>